--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   firebase_auth: ^4.1.5
@@ -42,6 +38,11 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_storage: ^11.0.6
   image_picker: ^0.8.6
+  video_player: ^2.4.9
+  uuid: ^3.0.7
+  timeago: ^3.2.2
+  video_compressor: ^0.0.5
+
 
 dev_dependencies:
   flutter_test:
