--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shorts.tiktok">
+    <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="tiktok"
+        android:label="Shorts"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
