--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   video_compressor: ^0.0.5
   cached_network_image: ^3.2.3
   flutter_native_splash: ^2.2.16
+  flutter_share: ^2.0.0
 
 
 
